tests/build_crystal/fail_duplicate_with_lattice.stderr
error[E0599]: no method named `with_lattice` found for struct `CrystalBuilder<LatticeSet, AtomsNotSet>` in the current scope
  --> tests/build_crystal/fail_duplicate_with_lattice.rs:12:10
   |
10 |       let _ = CrystalBuilder::new()
   |               ---------------------
   |               |
   |  _____________method `with_lattice` is available on `CrystalBuilder<LatticeNotSet, AtomsNotSet>`
   | |
11 | |         .with_lattice(lattice)
12 | |         .with_lattice(lattice)
   | |_________-^^^^^^^^^^^^
   |
help: there is a method `with_atoms` with a similar name
   |
12 -         .with_lattice(lattice)
12 +         .with_atoms(lattice)
   |
